--- a/P3D/packages.config
+++ b/P3D/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MonoGame.Framework.DX" version="3.7.1.189" targetFramework="net45" />
+  <package id="MonoGame.Content.Builder.Task" version="3.8.0.1641" targetFramework="net452" />
+  <package id="MonoGame.Framework.WindowsDX" version="3.8.0.1641" targetFramework="net452" />
   <package id="NAudio" version="1.10.0" targetFramework="net45" />
-  <package id="NAudio.Vorbis" version="1.2.0" targetFramework="net45" />
-  <package id="NVorbis" version="0.10.1" targetFramework="net45" />
+  <package id="NAudio.Vorbis" version="1.2.0" targetFramework="net472" />
+  <package id="NAudio.Wma" version="1.0.1" targetFramework="net472" />
+  <package id="NVorbis" version="0.10.1" targetFramework="net472" />
   <package id="SharpDX" version="4.2.0" targetFramework="net45" />
   <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net45" />
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net45" />
@@ -13,8 +15,9 @@
   <package id="SharpDX.MediaFoundation" version="4.2.0" targetFramework="net45" />
   <package id="SharpDX.XAudio2" version="4.2.0" targetFramework="net45" />
   <package id="SharpDX.XInput" version="4.2.0" targetFramework="net45" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net45" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net45" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net45" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
