Big update! Strafing in first person! Tree borders around the map no longer have holes at the bottom! Bugfixes! Almost all scripts for the first demo!

--- a/.gitignore
+++ b/.gitignore
@@ -303,7 +303,7 @@ Temporary Items
 
 # ignore /lib/save
 lib/save/
-
+lib/build/*.xnb
 # ignore binaries in p3d project
 p3d/**/*.exe
 p3d/**/*.dll
