GameJolt players can now use the Bicycle! I added a generic bike sprite for male and female players until I figure out how to upload your own skins Fixed the mother not moving up or down when entering your room after setting the clock When jumping out of the moving truck, the camera shifts to face the player's house. This is done to prevent the moving truck from blocking your view in the event Fixed some issues with player rotation

--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -11045,6 +11045,12 @@
     <Content Include="Content\Textures\OverworldSprites\OldWoman.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Textures\OverworldSprites\PlayerSkins\Generic_Bike_Female.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Textures\OverworldSprites\PlayerSkins\Generic_Bike_Male.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Textures\OverworldSprites\Reporter_Male.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
