Added scripts for the introduction with the rival Fixed some bugs that caused the player's gender and the rival's name and gender to not be set correctly Made the introduction dialogue of the male rival a little more female-friendly

--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -27279,6 +27279,12 @@
     <Content Include="Content\Data\Scripts\Hoenn\Cities\Littleroot\BirchsHouse2f\BirchsHouse2f_Mapscript.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Data\Scripts\Hoenn\Cities\Littleroot\BirchsHouse2f\Rival.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Data\Scripts\Hoenn\Cities\Littleroot\BirchsHouse2f\RivalsPokeBall.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Content\Data\Scripts\Hoenn\Cities\Littleroot\YourHouse1f\InFrontOfDoor.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
