--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -8192,6 +8192,9 @@
     <Content Include="Content\Songs\show_me_around.ogg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Songs\Silence.ogg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Songs\sovietmarch.ogg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
