--- a/P3D/packages.config
+++ b/P3D/packages.config
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Solver.Foundation" version="3.1.0" targetFramework="net472" />
   <package id="MonoGame.Content.Builder.Task" version="3.8.0.1641" targetFramework="net452" />
   <package id="MonoGame.Framework.WindowsDX" version="3.8.0.1641" targetFramework="net452" />
   <package id="NAudio" version="1.10.0" targetFramework="net45" />
   <package id="NAudio.Vorbis" version="1.2.0" targetFramework="net472" />
   <package id="NAudio.Wma" version="1.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="NVorbis" version="0.10.1" targetFramework="net472" />
   <package id="SharpDX" version="4.2.0" targetFramework="net45" />
   <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net45" />
