Updated Tackle move animation Added an animation for sending out and switching a Pokémon in Battle Some keybinding names have changed Fixed mispositioned Save Screen text Fixed Trainer Card Screen crash Fixed crash caused by a player name starting or ending with a space Made the pokémon selection screen in battles prettier Made Rock Smash an HM and Ride not an HM Corrected HP bar color in the Pokémon Summary screen Added correct Gym Badges and Pokédex data

--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -10740,9 +10740,6 @@
     <Content Include="Content\Textures\Battle\Fire\Smoke.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Textures\Battle\Fire\Smoke_Big.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Content\Textures\Battle\Normal\Growl.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -14810,6 +14807,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Compile Include="Battle\BattleAnimations\BABillMove.vb" />
+    <Compile Include="Battle\BattleAnimations\BABillOpacity.vb" />
     <Compile Include="Battle\BattleAnimations\BASound.vb" />
     <Compile Include="Pokemon\Abilities\Aerilate.vb" />
     <Compile Include="Pokemon\Abilities\PsychicSurge.vb" />
@@ -27292,7 +27290,7 @@
     <Compile Include="Battle\BattleSystemV2\QueryObjects\EndBattleQueryObject.vb" />
     <Compile Include="Battle\BattleSystemV2\QueryObjects\LearnMovesQueryObject.vb" />
     <Compile Include="Battle\BattleSystemV2\QueryObjects\MathHPQueryObject.vb" />
-    <Compile Include="Battle\BattleSystemV2\QueryObjects\MoveAnimationQueryObject.vb" />
+    <Compile Include="Battle\BattleSystemV2\QueryObjects\AnimationQueryObject.vb" />
     <Compile Include="Battle\BattleSystemV2\QueryObjects\PlayMusicQueryObject.vb" />
     <Compile Include="Battle\BattleSystemV2\QueryObjects\PlaySoundQueryObject.vb" />
     <Compile Include="Battle\BattleSystemV2\QueryObjects\QueryObject.vb" />
