Pokémon can be scaled in Battle Animations now Added Poison damage animation Optimized Battle Animation implementation Fixed a Localization token

--- a/P3D/P3D.vbproj
+++ b/P3D/P3D.vbproj
@@ -14644,6 +14644,7 @@
     </Content>
     <Compile Include="Battle\BattleAnimations\BABillMove.vb" />
     <Compile Include="Battle\BattleAnimations\BABillOpacity.vb" />
+    <Compile Include="Battle\BattleAnimations\BABillSize.vb" />
     <Compile Include="Battle\BattleAnimations\BASound.vb" />
     <Compile Include="Pokemon\Abilities\Aerilate.vb" />
     <Compile Include="Pokemon\Abilities\PsychicSurge.vb" />
